# RayTracer

./: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Geometry.h  LICENSE  Picture.cpp  Picture.h  Plane.cpp  Plane.h  PngWriter.cpp  PngWriter.h  README.md  Ray.cpp  Ray.h  RayCaster.cpp  RayCaster.h  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  config.cfg  main.cpp
